feat(semesterprojekt): CI/CD und Formatierung

--- a/Semesterprojekt/src/anwendungsfälle.tex
+++ b/Semesterprojekt/src/anwendungsfälle.tex
@@ -3,259 +3,175 @@ Außerdem wird jeder Anwendungsfall (ein paar Anwendungsfälle doppeln sich in d
 
 \begin{figure}[ht!]
     \includegraphics[width=\paperwidth-2in]{../assets/img/UML-Anwendungsfalldiagramme-Klingeln bei einem Mehrfamilienhaus}
-    \caption{Klingeln bei einem Mehrfamilienhaus}
+    \caption{Klingeln bei einem Mehrfamilienhaus Anwendungsfall}
     \label{fig:klingeln-bei-einem-mehrfamilienhaus}
 \end{figure}
 
 \begin{figure}[ht!]
     \includegraphics[width=\paperwidth-2in]{../assets/img/UML-Anwendungsfalldiagramme-Vandalismus.drawio}
-    \caption{Vandalismus}
+    \caption{Vandalismus Anwendungsfall}
     \label{fig:vandalismus}
 \end{figure}
 
 \begin{figure}[ht!]
     \includegraphics[width=\paperwidth-2in]{../assets/img/UML-Anwendungsfalldiagramme-Industrieanlage reparieren.drawio}
-    \caption{Industrieanlage reparieren}
+    \caption{Industrieanlage reparieren Anwendungsfall}
     \label{fig:industrieanlage-reparieren}
 \end{figure}
 
 \begin{figure}[ht!]
     \includegraphics[width=\paperwidth-2in]{../assets/img/UML-Anwendungsfalldiagramme-Zimmerservice.drawio}
-    \caption{Zimmerservice}
+    \caption{Zimmerservice Anwendungsfall}
     \label{fig:zimmerservice}
 \end{figure}
 
 
 \paragraph{Klingel betätigen}
-    \begin{itemize}
-        \item[Ziel]
-        Besucher möchte klingeln.
-        \item[Beschreibung]
-        Klingel wird betätigt, um Kontakt zu Wohnungsbesitzer aufzunehmen.
-        \item[Akteure]
-        Besucher.
-        \item[Auslöser]
-        Besucher möchte Kontakt zu Wohnungsbesitzer aufnehmen..
-        \item[Vorbedingungen]
-        Keine.
-        \item[Nachbedingungen]
-        Wohnungsbesitzer wird angerufen.
-        \end{itemize}
+    \begin{description}
+        \item[Ziel:] Besucher möchte klingeln.
+        \item[Beschreibung:] Klingel wird betätigt, um Kontakt zu Wohnungsbesitzer aufzunehmen.
+        \item[Akteure:] Besucher.
+        \item[Auslöser:] Besucher möchte Kontakt zu Wohnungsbesitzer aufnehmen..
+        \item[Vorbedingungen:] Keine.
+        \item[Nachbedingungen:] Wohnungsbesitzer wird angerufen.
+    \end{description}
 
 \paragraph{Anruf annehmen}
-    \begin{itemize}
-        \item[Ziel]
-        Ein eingehender Anruf soll angenommen werden.
-        \item[Beschreibung]
-        Indem der Benutzer auf die eingehende Benachrichtigung klickt, wird der Anruf angenommen.
-        Wenn die Visualisierung beim Benutzer schon geöffnet ist, kann der Anruf auch in der Visualisierung angenommen werden.
-        \item[Akteure]
-        Wohnungsbesitzer, Reparatur-Mitarbeiter, Zimmerservice.
-        \item[Auslöser]
-        Eingehender Anruf.
-        \item[Vorbedingungen]
-        Besucher hat Klingel betätigt oder Industrie-Mitarbeiter oder Hotelgast hat Kontakt angerufen.
-        \item[Nachbedingungen]
-        Anruf wurde angenommen und Gespräch gestartet.
-        \end{itemize}
+    \begin{description}
+        \item[Ziel:] Ein eingehender Anruf soll angenommen werden.
+        \item[Beschreibung:] Indem der Benutzer auf die eingehende Benachrichtigung klickt, wird der Anruf angenommen.
+            Wenn die Visualisierung beim Benutzer schon geöffnet ist, kann der Anruf auch in der Visualisierung angenommen werden.
+        \item[Akteure:] Wohnungsbesitzer, Reparatur-Mitarbeiter, Zimmerservice.
+        \item[Auslöser:] Eingehender Anruf.
+        \item[Vorbedingungen:] Besucher hat Klingel betätigt oder Industrie-Mitarbeiter oder Hotelgast hat Kontakt angerufen.
+        \item[Nachbedingungen:] Anruf wurde angenommen und Gespräch gestartet.
+    \end{description}
 
 \paragraph{Anruf ablehnen}
-    \begin{itemize}
-        \item[Ziel]
-        Ein eingehender Anruf soll abgelehnt werden.
-        \item[Beschreibung]
-        Indem der Benutzer die eingehende Benachritigung wegklickt, wird der Anruf abgelehnt.
-        Wenn die Visualisierung beim Benutzer schon geöffnet ist, kann der Anruf auch in der Visualisierung abgelehnt werden.
-        \item[Akteure]
-        Wohnungsbesitzer, Reparatur-Mitarbeiter, Zimmerservice.
-        \item[Auslöser]
-        Eingehender Anruf.
-        \item[Vorbedingungen]
-        Besucher hat Klingel betätigt oder Industrie-Mitarbeiter oder Hotelgast hat Kontakt angerufen.
-        \item[Nachbedingungen]
-        Anruf wurde abgelehnt.
-        \end{itemize}
+    \begin{description}
+        \item[Ziel:] Ein eingehender Anruf soll abgelehnt werden.
+        \item[Beschreibung:] Indem der Benutzer die eingehende Benachritigung wegklickt, wird der Anruf abgelehnt.
+            Wenn die Visualisierung beim Benutzer schon geöffnet ist, kann der Anruf auch in der Visualisierung abgelehnt werden.
+        \item[Akteure:] Wohnungsbesitzer, Reparatur-Mitarbeiter, Zimmerservice.
+        \item[Auslöser:] Eingehender Anruf.
+        \item[Vorbedingungen:] Besucher hat Klingel betätigt oder Industrie-Mitarbeiter oder Hotelgast hat Kontakt angerufen.
+        \item[Nachbedingungen:] Anruf wurde abgelehnt.
+    \end{description}
 
 \paragraph{Anruf beenden}
-    \begin{itemize}
-        \item[Ziel]
-        Ein laufender Anruf soll beendet werden.
-        \item[Beschreibung]
-        Indem der Benutzer in der Visualisierung den Button zum Auflegen betätigt, kann der Anruf jederzeit beendet werden.
-        \item[Akteure]
-        Wohnungsbesitzer, Industrie-Mitarbeiter, Reparatur-Mitarbeiter, Hotelgast, Zimmerservice.
-        \item[Auslöser]
-        Einer der Akteure möchte den Anruf beenden.
-        \item[Vorbedingungen]
-        Wohnungsbesitzer, Reparatur-Mitarbeiter oder Zimmerservice hat einen Anruf angenommen.
-        \item[Nachbedingungen]
-        Anruf wurde beendet.
-        \end{itemize}
+    \begin{description}
+        \item[Ziel:] Ein laufender Anruf soll beendet werden.
+        \item[Beschreibung:] Indem der Benutzer in der Visualisierung den Button zum Auflegen betätigt, kann der Anruf jederzeit beendet werden.
+        \item[Akteure:] Wohnungsbesitzer, Industrie-Mitarbeiter, Reparatur-Mitarbeiter, Hotelgast, Zimmerservice.
+        \item[Auslöser:] Einer der Akteure möchte den Anruf beenden.
+        \item[Vorbedingungen:] Wohnungsbesitzer, Reparatur-Mitarbeiter oder Zimmerservice hat einen Anruf angenommen.
+        \item[Nachbedingungen:] Anruf wurde beendet.
+    \end{description}
 
 \paragraph{Anruf weiterleiten}
-    \begin{itemize}
-        \item[Ziel]
-        Ein eingehender Anruf soll an einen ausgewählten Kontakt weitergeleitet werden.
-        \item[Beschreibung]
-        Indem der Benutzer in der Visualisierung den Button zum Weiterleiten betätigt, kann der eingehende Anruf an einen verfügbaren Kontakt weitergeleitet werden.
-        Diesen Kontakt kann er anschließend wie im Anwendungsfall "Kontakt suchen und auswählen" wählen.
-        Mit einem weiteren Knopfdruck wird der Anruf an den ausgewählten Kontakt weitergeleitet.
-        \item[Akteure]
-        Reparatur-Mitarbeiter.
-        \item[Auslöser]
-        Eingehender Anruf.
-        \item[Vorbedingungen]
-        Industrie-Mitarbeiter hat Kontakt des Reparatur-Unternehmens angerufen.
-        \item[Nachbedingungen]
-        Anruf wurde an ausgewählten Kontakt weitergeleitet.
-        \end{itemize}
+    \begin{description}
+        \item[Ziel:] Ein eingehender Anruf soll an einen ausgewählten Kontakt weitergeleitet werden.
+        \item[Beschreibung:] Indem der Benutzer in der Visualisierung den Button zum Weiterleiten betätigt, kann der eingehende Anruf an einen verfügbaren Kontakt weitergeleitet werden.
+            Diesen Kontakt kann er anschließend wie im Anwendungsfall "Kontakt suchen und auswählen" wählen.
+            Mit einem weiteren Knopfdruck wird der Anruf an den ausgewählten Kontakt weitergeleitet.
+        \item[Akteure:] Reparatur-Mitarbeiter.
+        \item[Auslöser:] Eingehender Anruf.
+        \item[Vorbedingungen:] Industrie-Mitarbeiter hat Kontakt des Reparatur-Unternehmens angerufen.
+        \item[Nachbedingungen:] Anruf wurde an ausgewählten Kontakt weitergeleitet.
+    \end{description}
 
 \paragraph{Live-Bild der Kamera anschalten}
-    \begin{itemize}
-        \item[Ziel]
-        Das Live-Bild der Kamera an der Eingangstür soll angeschaltet werden.
-        \item[Beschreibung]
-        Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Live-Bild angeschaltet.
-        \item[Akteure]
-        Wohnungsbesitzer.
-        \item[Auslöser]
-        Der Wohnungsbesitzer möchte das Live-Bild der Kamera sehen.
-        \item[Vorbedingungen]
-        Besucher hat Klingel betätigt und Wohnungsbesitzer hat den daraufhin ausgelösten Anruf angenommen.
-        Das Live-Bild ist ausgeschaltet.
-        \item[Nachbedingungen]
-        Live-Bild wurde für den Wohnungsbesitzer angeschaltet.
-        \end{itemize}
+    \begin{description}
+        \item[Ziel:] Das Live-Bild der Kamera an der Eingangstür soll angeschaltet werden.
+        \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Live-Bild angeschaltet.
+        \item[Akteure:] Wohnungsbesitzer.
+        \item[Auslöser:] Der Wohnungsbesitzer möchte das Live-Bild der Kamera sehen.
+        \item[Vorbedingungen:] Besucher hat Klingel betätigt und Wohnungsbesitzer hat den daraufhin ausgelösten Anruf angenommen.
+            Das Live-Bild ist ausgeschaltet.
+        \item[Nachbedingungen:] Live-Bild wurde für den Wohnungsbesitzer angeschaltet.
+    \end{description}
 
 \paragraph{Live-Bild der Kamera ausschalten}
-    \begin{itemize}
-        \item[Ziel]
-        Das Live-Bild der Kamera an der Eingangstür soll ausgeschaltet werden.
-        \item[Beschreibung]
-        Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Live-Bild ausgeschaltet.
-        \item[Akteure]
-        Wohnungsbesitzer.
-        \item[Auslöser]
-        Der Wohnungsbesitzer möchte das Live-Bild der Kamera nicht mehr sehen.
-        \item[Vorbedingungen]
-        Besucher hat Klingel betätigt und Wohnungsbesitzer hat den daraufhin ausgelösten Anruf angenommen.
-        Das Live-Bild ist angeschaltet.
-        \item[Nachbedingungen]
-        Live-Bild wurde für den Wohnungsbesitzer ausgeschaltet.
-        \end{itemize}
+    \begin{description}
+        \item[Ziel:] Das Live-Bild der Kamera an der Eingangstür soll ausgeschaltet werden.
+        \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Live-Bild ausgeschaltet.
+        \item[Akteure:] Wohnungsbesitzer.
+        \item[Auslöser:] Der Wohnungsbesitzer möchte das Live-Bild der Kamera nicht mehr sehen.
+        \item[Vorbedingungen:] Besucher hat Klingel betätigt und Wohnungsbesitzer hat den daraufhin ausgelösten Anruf angenommen.
+            Das Live-Bild ist angeschaltet.
+        \item[Nachbedingungen:] Live-Bild wurde für den Wohnungsbesitzer ausgeschaltet.
+    \end{description}
 
 \paragraph{Automatikschloss der Tür aufschließen}
-    \begin{itemize}
-        \item[Ziel]
-        Das Automatikschloss der Eingangstür soll aufgeschlossen werden, um den Besucher ins Gebäude zu lassen.
-        \item[Beschreibung]
-        Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Automatikschloss aufgeschlossen.
-        \item[Akteure]
-        Wohnungsbesitzer.
-        \item[Auslöser]
-        Der Wohnungsbesitzer möchte den Besucher ins Gebäude lassen.
-        \item[Vorbedingungen]
-        Besucher hat Klingel betätigt und Wohnungsbesitzer hat den daraufhin ausgelösten Anruf angenommen.
-        \item[Nachbedingungen]
-        Das Automatikschloss der Eingangstür wurde aufgeschlossen.
-        \end{itemize}
+    \begin{description}
+        \item[Ziel:] Das Automatikschloss der Eingangstür soll aufgeschlossen werden, um den Besucher ins Gebäude zu lassen.
+        \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Automatikschloss aufgeschlossen.
+        \item[Akteure:] Wohnungsbesitzer.
+        \item[Auslöser:] Der Wohnungsbesitzer möchte den Besucher ins Gebäude lassen.
+        \item[Vorbedingungen:] Besucher hat Klingel betätigt und Wohnungsbesitzer hat den daraufhin ausgelösten Anruf angenommen.
+        \item[Nachbedingungen:] Das Automatikschloss der Eingangstür wurde aufgeschlossen.
+    \end{description}
 
 \paragraph{Automatikschloss der Tür zuschließen}
-    \begin{itemize}
-        \item[Ziel]
-        Das Automatikschloss der Eingangstür soll zugeschlossen werden.
-        \item[Beschreibung]
-        Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Automatikschloss zugeschlossen.
-        \item[Akteure]
-        Wohnungsbesitzer.
-        \item[Auslöser]
-        Der Wohnungsbesitzer möchte die Eingangstür zuschließen.
-        \item[Vorbedingungen]
-        Besucher hat Klingel betätigt und Wohnungsbesitzer hat den daraufhin ausgelösten Anruf angenommen.
-        \item[Nachbedingungen]
-        Das Automatikschloss der Eingangstür wurde zugeschlossen.
-        \end{itemize}
+    \begin{description}
+        \item[Ziel:] Das Automatikschloss der Eingangstür soll zugeschlossen werden.
+        \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Automatikschloss zugeschlossen.
+        \item[Akteure:] Wohnungsbesitzer.
+        \item[Auslöser:] Der Wohnungsbesitzer möchte die Eingangstür zuschließen.
+        \item[Vorbedingungen:] Besucher hat Klingel betätigt und Wohnungsbesitzer hat den daraufhin ausgelösten Anruf angenommen.
+        \item[Nachbedingungen:] Das Automatikschloss der Eingangstür wurde zugeschlossen.
+    \end{description}
 
 \paragraph{Kontakt suchen und auswählen}
-    \begin{itemize}
-        \item[Ziel]
-        Der Benutzer hat einen gesuchten Kontakt ausgewählt, wenn es ihn gibt.
-        \item[Beschreibung]
-        Über eine Liste in der Visualisierung, eventuell auch Favoritenliste, kann der Benutzer einen Kontakt auswählen.
-        Er kann auch einen Kontakt über eine Suchleiste suchen und diesen auswählen, wenn es ihn gibt.
-        \item[Akteure]
-        Industrie-Mitarbeiter, Hotelgast.
-        \item[Auslöser]
-        Benutzer möchte Kontakt finden.
-        \item[Vorbedingungen]
-        Keine.
-        \item[Nachbedingungen]
-        Keine oder ein Kontakt wurde ausgewählt und kann angerufen werden.
-        \end{itemize}
+    \begin{description}
+        \item[Ziel:] Der Benutzer hat einen gesuchten Kontakt ausgewählt, wenn es ihn gibt.
+        \item[Beschreibung:] Über eine Liste in der Visualisierung, eventuell auch Favoritenliste, kann der Benutzer einen Kontakt auswählen.
+            Er kann auch einen Kontakt über eine Suchleiste suchen und diesen auswählen, wenn es ihn gibt.
+        \item[Akteure:] Industrie-Mitarbeiter, Hotelgast.
+        \item[Auslöser:] Benutzer möchte Kontakt finden.
+        \item[Vorbedingungen:] Keine.
+        \item[Nachbedingungen:] Keine oder ein Kontakt wurde ausgewählt und kann angerufen werden.
+    \end{description}
 
 \paragraph{Kontakt anrufen}
-    \begin{itemize}
-        \item[Ziel]
-        Der Benutzer startet einen Anruf mit dem ausgewählten Kontakt.
-        \item[Beschreibung]
-        Hat der Benutzer einen Kontakt ausgewählt, kann er diesen über einen Button anrufen.
-        \item[Akteure]
-        Industrie-Mitarbeiter, Hotelgast.
-        \item[Auslöser]
-        Benutzer möchte Kontakt anrufen.
-        \item[Vorbedingungen]
-        Ein Kontakt wurde ausgewählt.
-        \item[Nachbedingungen]
-        Ein Anruf mit Kontakt wurde gestartet.
-        \end{itemize}
+    \begin{description}
+        \item[Ziel:] Der Benutzer startet einen Anruf mit dem ausgewählten Kontakt.
+        \item[Beschreibung:] Hat der Benutzer einen Kontakt ausgewählt, kann er diesen über einen Button anrufen.
+        \item[Akteure:] Industrie-Mitarbeiter, Hotelgast.
+        \item[Auslöser:] Benutzer möchte Kontakt anrufen.
+        \item[Vorbedingungen:] Ein Kontakt wurde ausgewählt.
+        \item[Nachbedingungen:] Ein Anruf mit Kontakt wurde gestartet.
+    \end{description}
 
 \paragraph{Bildschirmfreigabe starten}
-    \begin{itemize}
-        \item[Ziel]
-        Die Bildschirmfreigabe soll gestartet werden.
-        \item[Beschreibung]
-        Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird sein Bildschirm mit dem anderen Teilnehmer des Anrufs geteilt.
-        \item[Akteure]
-        Industrie-Mitarbeiter.
-        \item[Auslöser]
-        Der Industrie-Mitarbeiter möchte seinen Bildschirm mit dem Reparatur-Mitarbeiter teilen.
-        \item[Vorbedingungen]
-        Reparatur-Mitarbeiter hat einen Anruf angenommen.
-        Es wurde noch keine Bildschirmfreigabe gestartet oder diese wurde schon wieder gestoppt.
-        \item[Nachbedingungen]
-        Die Bildschirmfreigabe wurde gestartet.
-        \end{itemize}
+    \begin{description}
+        \item[Ziel:] Die Bildschirmfreigabe soll gestartet werden.
+        \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird sein Bildschirm mit dem anderen Teilnehmer des Anrufs geteilt.
+        \item[Akteure:] Industrie-Mitarbeiter.
+        \item[Auslöser:] Der Industrie-Mitarbeiter möchte seinen Bildschirm mit dem Reparatur-Mitarbeiter teilen.
+        \item[Vorbedingungen:] Reparatur-Mitarbeiter hat einen Anruf angenommen.
+            Es wurde noch keine Bildschirmfreigabe gestartet oder diese wurde schon wieder gestoppt.
+        \item[Nachbedingungen:] Die Bildschirmfreigabe wurde gestartet.
+    \end{description}
 
 \paragraph{Bildschirmfreigabe stoppen}
-    \begin{itemize}
-        \item[Ziel]
-        Die Bildschirmfreigabe soll gestoppt werden.
-        \item[Beschreibung]
-        Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Teilen seines Bildschirms mit dem anderen Teilnehmer des Anrufs gestoppt.
-        \item[Akteure]
-        Industrie-Mitarbeiter.
-        \item[Auslöser]
-        Der Industrie-Mitarbeiter möchte seinen Bildschirm nicht mehr mit dem Reparatur-Mitarbeiter teilen.
-        \item[Vorbedingungen]
-        Reparatur-Mitarbeiter hat einen Anruf angenommen.
-        Die Bildschirmfreigabe wurde gestartet.
-        \item[Nachbedingungen]
-        Die Bildschirmfreigabe wurde gestoppt.
-        \end{itemize}
+    \begin{description}
+        \item[Ziel:] Die Bildschirmfreigabe soll gestoppt werden.
+        \item[Beschreibung:] Indem der Benutzer in der Visualisierung den entsprechenden Button betätigt, wird das Teilen seines Bildschirms mit dem anderen Teilnehmer des Anrufs gestoppt.
+        \item[Akteure:] Industrie-Mitarbeiter.
+        \item[Auslöser:] Der Industrie-Mitarbeiter möchte seinen Bildschirm nicht mehr mit dem Reparatur-Mitarbeiter teilen.
+        \item[Vorbedingungen:] Reparatur-Mitarbeiter hat einen Anruf angenommen.
+            Die Bildschirmfreigabe wurde gestartet.
+        \item[Nachbedingungen:] Die Bildschirmfreigabe wurde gestoppt.
+    \end{description}
 
 \paragraph{Aufgezeichnetes Videomaterial einsehen}
-    \begin{itemize}
-        \item[Ziel]
-        Aufgezeichnetes Videomaterial, das nicht älter als eine Woche ist, soll eingesehen werden.
-        \item[Beschreibung]
-        Über die Visualisierung kann der Benutzer, über eine Liste, die Kamera auswählen, von der er das aufgezeichnete Videomaterial einsehen möchte.
-        Darufhin wird ihm das entsprechende Videomaterial der letzten 7 Tage angezeigt.
-        \item[Akteure]
-        Hausverwalter.
-        \item[Auslöser]
-        Hausverwalter möchte Videomaterial einsehen.
-        \item[Vorbedingungen]
-        Keine.
-        \item[Nachbedingungen]
-        Aufgezeichnetes Videomaterial, das nicht älter als eine Woche ist, wurde eingesehen.
-        \end{itemize}   
+    \begin{description}
+        \item[Ziel:] Aufgezeichnetes Videomaterial, das nicht älter als eine Woche ist, soll eingesehen werden.
+        \item[Beschreibung] Über die Visualisierung kann der Benutzer, über eine Liste, die Kamera auswählen, von der er das aufgezeichnete Videomaterial einsehen möchte.
+            Darufhin wird ihm das entsprechende Videomaterial der letzten 7 Tage angezeigt.
+        \item[Akteure:] Hausverwalter.
+        \item[Auslöser:] Hausverwalter möchte Videomaterial einsehen.
+        \item[Vorbedingungen:] Keine.
+        \item[Nachbedingungen:] Aufgezeichnetes Videomaterial, das nicht älter als eine Woche ist, wurde eingesehen.
+    \end{description}
