--- a/Semesterprojekt/src/kontextmodell.tex
+++ b/Semesterprojekt/src/kontextmodell.tex
@@ -1,7 +1,7 @@
 \begin{figure}[ht!]
     \centering\includegraphics[width=\paperwidth/2]{../assets/img/kontextmodell}
 
-    \caption{Kontextmodell}
+    \caption{Kontextmodell der neu zu entwickelnden (Weiß) Komponenten in Verbindung zu bestehenden (Rot) Komponenten}
     \label{fig:kontextmodell}
 \end{figure}
 In Abbildung~\ref{fig:kontextmodell} ist das Kontextmodell dargestellt.
