--- a/Semesterprojekt/src/main.tex
+++ b/Semesterprojekt/src/main.tex
@@ -13,6 +13,8 @@
 \usepackage{amsfonts}
 \usepackage{mathtools}
 
+\usepackage{enumitem}
+
 \usepackage{authblk}
 \renewcommand*{\Authsep}{, }
 \renewcommand*{\Authand}{ und }
