--- a/Semesterprojekt/src/produkt-roadmap.tex
+++ b/Semesterprojekt/src/produkt-roadmap.tex
@@ -5,3 +5,6 @@ Nicht nur die Kundengruppe, sondern auch das Integrieren in vorhandene Subsystem
 
 \subsection{Komponentendiagramm}\label{subsec:komponentendiagramm}
     \input{komponentendiagramm}
+
+\subsection{Continous Integration / Deployment}\label{subsec:continous-integration-and-deployment}
+    \input{continous-integration-and-deployment}
