--- a/Semesterprojekt/src/komponentendiagramm.tex
+++ b/Semesterprojekt/src/komponentendiagramm.tex
@@ -1,7 +1,7 @@
 \begin{figure}[ht!]
-    \centering\includegraphics[width=\paperwidth/2]{../assets/img/Komponentendiagramm}
+    \centering\includegraphics[width=\paperwidth-2in]{../assets/img/Komponentendiagramm}
 
-    \caption{Komponentendiagramm}
+    \caption{Komponenten von App, Hardware und Backend}
     \label{fig:komponentendiagramm}
 \end{figure}
 In Abbildung~\ref{fig:komponentendiagramm} ist das Komponentendiagramm dargestellt.
